# burrtype

./: .gitignore  Cargo.toml  LICENSE  README.md  readme.md
.cargo/: config.toml
burrtype_derive/: .gitignore  Cargo.toml
burrtype_derive/src/: burrtribute.rs  gen.rs  lib.rs
burrtype_internal/: Cargo.toml
burrtype_internal/src/: ir.rs  lib.rs  prelude.rs  syn.rs
burrtype_internal/src/ir/: attr.rs  enum.rs  field.rs  item.rs  mod.rs  struct.rs
examples/: reflection.rs  sandbox.rs
examples/auto_types/: Cargo.toml
examples/auto_types/src/: inner.rs  lib.rs  main.rs  serde_test.rs
examples/sandbox/: Cargo.toml  README.md
examples/sandbox/src/: lib.rs  main.rs
examples/sandbox/test-client/: package.json  tsconfig.json
examples/sandbox/test-client/src/: index.ts  serde_test.ts  util.ts
examples/sandbox/test-client/src/api/: common.ts  things.ts  types.ts
examples/sandbox/test-server/: Cargo.toml
examples/sandbox/test-server/src/: main.rs  serde_test.rs
examples/sandbox/ts/: common.ts
examples/testmod/: mod.rs
src/: export.rs  ir.rs  lib.rs  prelude.rs  syn.rs  targets.rs  type_registration.rs
src/export/: burrmod.rs  file.rs  format.rs  item.rs  output.rs  target.rs
src/ir/: item.rs  mod.rs  struct.rs
src/targets/: typescript.rs
src/targets/typescript/: exporter.rs  file.rs
src/tests/: derive.rs
