[package]
name = "burrtype"
description = "A framework for exporting types to other languages"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thebluefish/burrtype"

[workspace]
members = [
    ".",
    "burrtype_derive",
    "examples/sandbox",
]

[features]
default = ["comments"]
typescript = []
comments = ["bevy_reflect/documentation"]

[dependencies]
burrtype_derive = { path = "burrtype_derive" }
bevy_reflect = "0.11"
thiserror = "1.0"
Inflector = "0.11"
path_macro = "1.0"
path-slash = "0.2"
syn = "2.0"
quote = "1.0"
linkme = "0.3"