[package]
name = "burrtype"
description = "A framework for exporting types to other languages"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thebluefish/burrtype"

[workspace]
members = [
    ".",
    "burrtype_derive",
    "burrtype_internal",
    "examples/sandbox",
    "examples/sandbox/test-server"
]

[features]
default = ["comments", "auto_register"]
typescript = []
auto_register = ["burrtype_derive/auto_register"]
comments = ["burrtype_derive/docs", "burrtype_internal/docs"]

[dependencies]
burrtype_derive = { path = "burrtype_derive", version = "0.2" }
burrtype_internal = { path = "burrtype_internal", version = "0.2" }
thiserror = "1.0"
Inflector = "0.11"
path_macro = "1.0"
path-slash = "0.2"
syn = "2.0"
quote = "1.0"
linkme = "0.3"