[package]
name = "burrtype"
description = "A framework for exporting types to other languages"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thebluefish/burrtype"

[workspace]
members = [
    ".",
    "burrtype_derive",
    "burrtype_internal",
    "examples/auto_types",
    "examples/sandbox",
    "examples/sandbox/test-server"
]

[features]
default = ["comments", "auto_register", "serde_compat"]
comments = ["burrtype_derive/docs", "burrtype_internal/docs"]
auto_register = ["burrtype_derive/auto_register"]
serde_compat = ["burrtype_derive/serde_compat"]
typescript = []

[dependencies]
burrtype_derive = { path = "burrtype_derive", version = "0.3" }
burrtype_internal = { path = "burrtype_internal", version = "0.3" }
thiserror = "1.0"
Inflector = "0.11"
path_macro = "1.0"
path-slash = "0.2"
syn = "2.0"
quote = "1.0"
linkme = "0.3"