[package]
name = "burrtype_derive"
description = "Macro helpers for burrtype"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thebluefish/burrtype"

[lib]
name = "burrtype_derive"
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
Inflector = "0.11"