[package]
name = "burrtype_derive"
description = "Macro helpers for burrtype"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thebluefish/burrtype"

[features]
default = ["serde_compat"]
docs = ["burrtype_internal/docs"]
auto_register = []
serde_compat = ["burrtype_internal/serde_compat"]

[lib]
name = "burrtype_derive"
proc-macro = true

[dependencies]
burrtype_internal = { path = "../burrtype_internal", version = "0.3" }
syn = { version = "2.0", features = ["parsing", "printing"]}
quote = "1.0"
proc-macro2 = "1.0"
Inflector = "0.11"