[package]
name = "burrtype_internal"
description = "Reflection types for `burrtype` and `burrtype_derive`"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thebluefish/burrtype"

[features]
default = []
docs = []

[dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
Inflector = "0.11"